kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-app-service
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: react-app
